codigo/parser/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    NEW
    APPEND
    SET
    GET
    REMOVE

Grammar

Rule 0     S' -> programa
Rule 1     programa -> creadirprocglobal a neur22 c cancion
Rule 2     creadirprocglobal -> <empty>
Rule 3     a -> empty
Rule 4     a -> vars b
Rule 5     b -> empty
Rule 6     b -> a
Rule 7     neur22 -> <empty>
Rule 8     c -> empty
Rule 9     c -> funcion d
Rule 10    d -> empty
Rule 11    d -> c
Rule 12    vars -> VAR v : tipo u ;
Rule 13    v -> ID
Rule 14    funcion -> FUNC z ID meterfuncion ( params ) f neur23 bloque
Rule 15    z -> INT
Rule 16    z -> CHAR
Rule 17    z -> FLOAT
Rule 18    z -> BOOL
Rule 19    z -> VOID
Rule 20    meterfuncion -> <empty>
Rule 21    neur23 -> <empty>
Rule 22    f -> empty
Rule 23    f -> vars g
Rule 24    g -> empty
Rule 25    g -> f
Rule 26    params -> empty
Rule 27    params -> tipo ID meterparams h
Rule 28    meterparams -> <empty>
Rule 29    h -> empty
Rule 30    h -> , params
Rule 31    i -> empty
Rule 32    i -> estatuto j
Rule 33    j -> empty
Rule 34    j -> i
Rule 35    bloque -> { i }
Rule 36    cancion -> CANCION ( CTEE ) metercancion f bloque
Rule 37    metercancion -> <empty>
Rule 38    estatuto -> asignacion
Rule 39    estatuto -> if
Rule 40    estatuto -> for
Rule 41    estatuto -> return
Rule 42    estatuto -> while
Rule 43    estatuto -> play
Rule 44    estatuto -> print
Rule 45    estatuto -> callvoidfunc
Rule 46    asignacion -> ID asiglista = neur8 expresion ;
Rule 47    neur8 -> <empty>
Rule 48    asiglista -> empty
Rule 49    asiglista -> accesoVarDim
Rule 50    if -> IF ( expresion ) neur13 bloque l ; neur15
Rule 51    neur13 -> <empty>
Rule 52    l -> empty
Rule 53    l -> ELSE neur14 bloque
Rule 54    neur14 -> <empty>
Rule 55    neur15 -> <empty>
Rule 56    for -> FOR ( asignacion neur18 expresion ; neur19 asignacion ) neur21 bloque ; neur20
Rule 57    neur18 -> <empty>
Rule 58    neur19 -> <empty>
Rule 59    neur21 -> <empty>
Rule 60    neur20 -> <empty>
Rule 61    expresion -> m subexpresion
Rule 62    m -> empty
Rule 63    m -> NOT
Rule 64    subexpresion -> exp neur10 o
Rule 65    neur10 -> <empty>
Rule 66    o -> empty
Rule 67    o -> AND neur9_1 subexpresion
Rule 68    o -> OR neur9_2 subexpresion
Rule 69    neur9_1 -> <empty>
Rule 70    neur9_2 -> <empty>
Rule 71    exp -> nexp p neur12
Rule 72    neur12 -> <empty>
Rule 73    p -> empty
Rule 74    p -> EQ neur11_1 nexp
Rule 75    p -> NOTEQ neur11_2 nexp
Rule 76    p -> > neur11_3 nexp
Rule 77    p -> < neur11_4 nexp
Rule 78    p -> MTHANEQ neur11_5 nexp
Rule 79    p -> LTHANEQ neur11_6 nexp
Rule 80    neur11_1 -> <empty>
Rule 81    neur11_2 -> <empty>
Rule 82    neur11_3 -> <empty>
Rule 83    neur11_4 -> <empty>
Rule 84    neur11_5 -> <empty>
Rule 85    neur11_6 -> <empty>
Rule 86    nexp -> termino neur5 q
Rule 87    neur5 -> <empty>
Rule 88    q -> empty
Rule 89    q -> + neur3_1 nexp
Rule 90    q -> - neur3_2 nexp
Rule 91    neur3_1 -> <empty>
Rule 92    neur3_2 -> <empty>
Rule 93    termino -> meteneg factor neur4 n
Rule 94    neur4 -> <empty>
Rule 95    n -> empty
Rule 96    n -> * neur2_1 termino
Rule 97    n -> / neur2_2 termino
Rule 98    neur2_1 -> <empty>
Rule 99    neur2_2 -> <empty>
Rule 100   factor -> ( neur6 expresion ) neur7
Rule 101   factor -> varcte
Rule 102   meteneg -> empty
Rule 103   meteneg -> -
Rule 104   neur6 -> <empty>
Rule 105   neur7 -> <empty>
Rule 106   varcte -> ID r neurVar
Rule 107   varcte -> CTEE neurCteE
Rule 108   varcte -> CTEF neurCteF
Rule 109   varcte -> CTEBOOL neurCteB
Rule 110   varcte -> callreturnfunc
Rule 111   varcte -> CTECHAR neurCteCh
Rule 112   neurVar -> <empty>
Rule 113   neurCteE -> <empty>
Rule 114   neurCteF -> <empty>
Rule 115   neurCteB -> <empty>
Rule 116   neurCteCh -> <empty>
Rule 117   r -> empty
Rule 118   r -> oplista
Rule 119   oplista -> accesoVarDim
Rule 120   oplista -> length
Rule 121   accesoVarDim -> [ neur27 nexp ]
Rule 122   neur27 -> <empty>
Rule 123   length -> . LENGTH ( )
Rule 124   while -> WHILE ( neur16 expresion ) neur13 bloque ; neur17
Rule 125   neur16 -> <empty>
Rule 126   neur17 -> <empty>
Rule 127   play -> PLAY ( NOTA , CTEE ) ;
Rule 128   print -> PRINT expresion ;
Rule 129   callreturnfunc -> CALL ID neur24 ( s ) neur26 ;
Rule 130   s -> empty
Rule 131   s -> expresion neur25 t
Rule 132   neur25 -> <empty>
Rule 133   t -> empty
Rule 134   t -> , s
Rule 135   callvoidfunc -> CALL ID neur24 ( s ) neur26 ;
Rule 136   neur24 -> <empty>
Rule 137   neur26 -> <empty>
Rule 138   return -> RETURN ( expresion ) ;
Rule 139   tipo -> y
Rule 140   u -> empty
Rule 141   u -> LIST ( CTEE )
Rule 142   y -> INT
Rule 143   y -> CHAR
Rule 144   y -> FLOAT
Rule 145   y -> BOOL
Rule 146   empty -> <empty>

Terminals, with rules where they appear

(                    : 14 36 50 56 100 123 124 127 129 135 138 141
)                    : 14 36 50 56 100 123 124 127 129 135 138 141
*                    : 96
+                    : 89
,                    : 30 127 134
-                    : 90 103
.                    : 123
/                    : 97
:                    : 12
;                    : 12 46 50 56 56 124 127 128 129 135 138
<                    : 77
=                    : 46
>                    : 76
AND                  : 67
APPEND               : 
BOOL                 : 18 145
CALL                 : 129 135
CANCION              : 36
CHAR                 : 16 143
CTEBOOL              : 109
CTECHAR              : 111
CTEE                 : 36 107 127 141
CTEF                 : 108
ELSE                 : 53
EQ                   : 74
FLOAT                : 17 144
FOR                  : 56
FUNC                 : 14
GET                  : 
ID                   : 13 14 27 46 106 129 135
IF                   : 50
INT                  : 15 142
LENGTH               : 123
LIST                 : 141
LTHANEQ              : 79
MTHANEQ              : 78
NEW                  : 
NOT                  : 63
NOTA                 : 127
NOTEQ                : 75
OR                   : 68
PLAY                 : 127
PRINT                : 128
REMOVE               : 
RETURN               : 138
SET                  : 
VAR                  : 12
VOID                 : 19
WHILE                : 124
[                    : 121
]                    : 121
error                : 
{                    : 35
}                    : 35

Nonterminals, with rules where they appear

a                    : 1 6
accesoVarDim         : 49 119
asiglista            : 46
asignacion           : 38 56 56
b                    : 4
bloque               : 14 36 50 53 56 124
c                    : 1 11
callreturnfunc       : 110
callvoidfunc         : 45
cancion              : 1
creadirprocglobal    : 1
d                    : 9
empty                : 3 5 8 10 22 24 26 29 31 33 48 52 62 66 73 88 95 102 117 130 133 140
estatuto             : 32
exp                  : 64
expresion            : 46 50 56 100 124 128 131 138
f                    : 14 25 36
factor               : 93
for                  : 40
funcion              : 9
g                    : 23
h                    : 27
i                    : 34 35
if                   : 39
j                    : 32
l                    : 50
length               : 120
m                    : 61
meteneg              : 93
metercancion         : 36
meterfuncion         : 14
meterparams          : 27
n                    : 93
neur10               : 64
neur11_1             : 74
neur11_2             : 75
neur11_3             : 76
neur11_4             : 77
neur11_5             : 78
neur11_6             : 79
neur12               : 71
neur13               : 50 124
neur14               : 53
neur15               : 50
neur16               : 124
neur17               : 124
neur18               : 56
neur19               : 56
neur20               : 56
neur21               : 56
neur22               : 1
neur23               : 14
neur24               : 129 135
neur25               : 131
neur26               : 129 135
neur27               : 121
neur2_1              : 96
neur2_2              : 97
neur3_1              : 89
neur3_2              : 90
neur4                : 93
neur5                : 86
neur6                : 100
neur7                : 100
neur8                : 46
neur9_1              : 67
neur9_2              : 68
neurCteB             : 109
neurCteCh            : 111
neurCteE             : 107
neurCteF             : 108
neurVar              : 106
nexp                 : 71 74 75 76 77 78 79 89 90 121
o                    : 64
oplista              : 118
p                    : 71
params               : 14 30
play                 : 43
print                : 44
programa             : 0
q                    : 86
r                    : 106
return               : 41
s                    : 129 134 135
subexpresion         : 61 67 68
t                    : 131
termino              : 86 96 97
tipo                 : 12 27
u                    : 12
v                    : 12
varcte               : 101
vars                 : 4 23
while                : 42
y                    : 139
z                    : 14

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . creadirprocglobal a neur22 c cancion
    (2) creadirprocglobal -> .

    VAR             reduce using rule 2 (creadirprocglobal -> .)
    FUNC            reduce using rule 2 (creadirprocglobal -> .)
    CANCION         reduce using rule 2 (creadirprocglobal -> .)

    creadirprocglobal              shift and go to state 1
    programa                       shift and go to state 2

state 1

    (1) programa -> creadirprocglobal . a neur22 c cancion
    (3) a -> . empty
    (4) a -> . vars b
    (146) empty -> .
    (12) vars -> . VAR v : tipo u ;

    FUNC            reduce using rule 146 (empty -> .)
    CANCION         reduce using rule 146 (empty -> .)
    VAR             shift and go to state 5

    a                              shift and go to state 3
    vars                           shift and go to state 4
    empty                          shift and go to state 6

state 2

    (0) S' -> programa .



state 3

    (1) programa -> creadirprocglobal a . neur22 c cancion
    (7) neur22 -> .

    FUNC            reduce using rule 7 (neur22 -> .)
    CANCION         reduce using rule 7 (neur22 -> .)

    neur22                         shift and go to state 7

state 4

    (4) a -> vars . b
    (5) b -> . empty
    (6) b -> . a
    (146) empty -> .
    (3) a -> . empty
    (4) a -> . vars b
    (12) vars -> . VAR v : tipo u ;

    FUNC            reduce using rule 146 (empty -> .)
    CANCION         reduce using rule 146 (empty -> .)
    VAR             shift and go to state 5

    a                              shift and go to state 8
    b                              shift and go to state 9
    vars                           shift and go to state 4
    empty                          shift and go to state 10

state 5

    (12) vars -> VAR . v : tipo u ;
    (13) v -> . ID

    ID              shift and go to state 12

    v                              shift and go to state 11

state 6

    (3) a -> empty .

    FUNC            reduce using rule 3 (a -> empty .)
    CANCION         reduce using rule 3 (a -> empty .)


state 7

    (1) programa -> creadirprocglobal a neur22 . c cancion
    (8) c -> . empty
    (9) c -> . funcion d
    (146) empty -> .
    (14) funcion -> . FUNC z ID meterfuncion ( params ) f neur23 bloque

    CANCION         reduce using rule 146 (empty -> .)
    FUNC            shift and go to state 14

    c                              shift and go to state 13
    empty                          shift and go to state 15
    funcion                        shift and go to state 16

state 8

    (6) b -> a .

    FUNC            reduce using rule 6 (b -> a .)
    CANCION         reduce using rule 6 (b -> a .)


state 9

    (4) a -> vars b .

    FUNC            reduce using rule 4 (a -> vars b .)
    CANCION         reduce using rule 4 (a -> vars b .)


state 10

    (5) b -> empty .
    (3) a -> empty .

  ! reduce/reduce conflict for FUNC resolved using rule 3 (a -> empty .)
  ! reduce/reduce conflict for CANCION resolved using rule 3 (a -> empty .)
    FUNC            reduce using rule 3 (a -> empty .)
    CANCION         reduce using rule 3 (a -> empty .)

  ! FUNC            [ reduce using rule 5 (b -> empty .) ]
  ! CANCION         [ reduce using rule 5 (b -> empty .) ]


state 11

    (12) vars -> VAR v . : tipo u ;

    :               shift and go to state 17


state 12

    (13) v -> ID .

    :               reduce using rule 13 (v -> ID .)


state 13

    (1) programa -> creadirprocglobal a neur22 c . cancion
    (36) cancion -> . CANCION ( CTEE ) metercancion f bloque

    CANCION         shift and go to state 19

    cancion                        shift and go to state 18

state 14

    (14) funcion -> FUNC . z ID meterfuncion ( params ) f neur23 bloque
    (15) z -> . INT
    (16) z -> . CHAR
    (17) z -> . FLOAT
    (18) z -> . BOOL
    (19) z -> . VOID

    INT             shift and go to state 23
    CHAR            shift and go to state 22
    FLOAT           shift and go to state 21
    BOOL            shift and go to state 24
    VOID            shift and go to state 20

    z                              shift and go to state 25

state 15

    (8) c -> empty .

    CANCION         reduce using rule 8 (c -> empty .)


state 16

    (9) c -> funcion . d
    (10) d -> . empty
    (11) d -> . c
    (146) empty -> .
    (8) c -> . empty
    (9) c -> . funcion d
    (14) funcion -> . FUNC z ID meterfuncion ( params ) f neur23 bloque

    CANCION         reduce using rule 146 (empty -> .)
    FUNC            shift and go to state 14

    c                              shift and go to state 26
    d                              shift and go to state 27
    empty                          shift and go to state 28
    funcion                        shift and go to state 16

state 17

    (12) vars -> VAR v : . tipo u ;
    (139) tipo -> . y
    (142) y -> . INT
    (143) y -> . CHAR
    (144) y -> . FLOAT
    (145) y -> . BOOL

    INT             shift and go to state 30
    CHAR            shift and go to state 32
    FLOAT           shift and go to state 31
    BOOL            shift and go to state 34

    y                              shift and go to state 33
    tipo                           shift and go to state 29

state 18

    (1) programa -> creadirprocglobal a neur22 c cancion .

    $end            reduce using rule 1 (programa -> creadirprocglobal a neur22 c cancion .)


state 19

    (36) cancion -> CANCION . ( CTEE ) metercancion f bloque

    (               shift and go to state 35


state 20

    (19) z -> VOID .

    ID              reduce using rule 19 (z -> VOID .)


state 21

    (17) z -> FLOAT .

    ID              reduce using rule 17 (z -> FLOAT .)


state 22

    (16) z -> CHAR .

    ID              reduce using rule 16 (z -> CHAR .)


state 23

    (15) z -> INT .

    ID              reduce using rule 15 (z -> INT .)


state 24

    (18) z -> BOOL .

    ID              reduce using rule 18 (z -> BOOL .)


state 25

    (14) funcion -> FUNC z . ID meterfuncion ( params ) f neur23 bloque

    ID              shift and go to state 36


state 26

    (11) d -> c .

    CANCION         reduce using rule 11 (d -> c .)


state 27

    (9) c -> funcion d .

    CANCION         reduce using rule 9 (c -> funcion d .)


state 28

    (10) d -> empty .
    (8) c -> empty .

  ! reduce/reduce conflict for CANCION resolved using rule 8 (c -> empty .)
    CANCION         reduce using rule 8 (c -> empty .)

  ! CANCION         [ reduce using rule 10 (d -> empty .) ]


state 29

    (12) vars -> VAR v : tipo . u ;
    (140) u -> . empty
    (141) u -> . LIST ( CTEE )
    (146) empty -> .

    LIST            shift and go to state 37
    ;               reduce using rule 146 (empty -> .)

    u                              shift and go to state 38
    empty                          shift and go to state 39

state 30

    (142) y -> INT .

    ID              reduce using rule 142 (y -> INT .)
    LIST            reduce using rule 142 (y -> INT .)
    ;               reduce using rule 142 (y -> INT .)


state 31

    (144) y -> FLOAT .

    ID              reduce using rule 144 (y -> FLOAT .)
    LIST            reduce using rule 144 (y -> FLOAT .)
    ;               reduce using rule 144 (y -> FLOAT .)


state 32

    (143) y -> CHAR .

    ID              reduce using rule 143 (y -> CHAR .)
    LIST            reduce using rule 143 (y -> CHAR .)
    ;               reduce using rule 143 (y -> CHAR .)


state 33

    (139) tipo -> y .

    ID              reduce using rule 139 (tipo -> y .)
    LIST            reduce using rule 139 (tipo -> y .)
    ;               reduce using rule 139 (tipo -> y .)


state 34

    (145) y -> BOOL .

    ID              reduce using rule 145 (y -> BOOL .)
    LIST            reduce using rule 145 (y -> BOOL .)
    ;               reduce using rule 145 (y -> BOOL .)


state 35

    (36) cancion -> CANCION ( . CTEE ) metercancion f bloque

    CTEE            shift and go to state 40


state 36

    (14) funcion -> FUNC z ID . meterfuncion ( params ) f neur23 bloque
    (20) meterfuncion -> .

    (               reduce using rule 20 (meterfuncion -> .)

    meterfuncion                   shift and go to state 41

state 37

    (141) u -> LIST . ( CTEE )

    (               shift and go to state 42


state 38

    (12) vars -> VAR v : tipo u . ;

    ;               shift and go to state 43


state 39

    (140) u -> empty .

    ;               reduce using rule 140 (u -> empty .)


state 40

    (36) cancion -> CANCION ( CTEE . ) metercancion f bloque

    )               shift and go to state 44


state 41

    (14) funcion -> FUNC z ID meterfuncion . ( params ) f neur23 bloque

    (               shift and go to state 45


state 42

    (141) u -> LIST ( . CTEE )

    CTEE            shift and go to state 46


state 43

    (12) vars -> VAR v : tipo u ; .

    VAR             reduce using rule 12 (vars -> VAR v : tipo u ; .)
    FUNC            reduce using rule 12 (vars -> VAR v : tipo u ; .)
    CANCION         reduce using rule 12 (vars -> VAR v : tipo u ; .)
    {               reduce using rule 12 (vars -> VAR v : tipo u ; .)


state 44

    (36) cancion -> CANCION ( CTEE ) . metercancion f bloque
    (37) metercancion -> .

    VAR             reduce using rule 37 (metercancion -> .)
    {               reduce using rule 37 (metercancion -> .)

    metercancion                   shift and go to state 47

state 45

    (14) funcion -> FUNC z ID meterfuncion ( . params ) f neur23 bloque
    (26) params -> . empty
    (27) params -> . tipo ID meterparams h
    (146) empty -> .
    (139) tipo -> . y
    (142) y -> . INT
    (143) y -> . CHAR
    (144) y -> . FLOAT
    (145) y -> . BOOL

    )               reduce using rule 146 (empty -> .)
    INT             shift and go to state 30
    CHAR            shift and go to state 32
    FLOAT           shift and go to state 31
    BOOL            shift and go to state 34

    tipo                           shift and go to state 48
    params                         shift and go to state 49
    y                              shift and go to state 33
    empty                          shift and go to state 50

state 46

    (141) u -> LIST ( CTEE . )

    )               shift and go to state 51


state 47

    (36) cancion -> CANCION ( CTEE ) metercancion . f bloque
    (22) f -> . empty
    (23) f -> . vars g
    (146) empty -> .
    (12) vars -> . VAR v : tipo u ;

    {               reduce using rule 146 (empty -> .)
    VAR             shift and go to state 5

    vars                           shift and go to state 52
    f                              shift and go to state 53
    empty                          shift and go to state 54

state 48

    (27) params -> tipo . ID meterparams h

    ID              shift and go to state 55


state 49

    (14) funcion -> FUNC z ID meterfuncion ( params . ) f neur23 bloque

    )               shift and go to state 56


state 50

    (26) params -> empty .

    )               reduce using rule 26 (params -> empty .)


state 51

    (141) u -> LIST ( CTEE ) .

    ;               reduce using rule 141 (u -> LIST ( CTEE ) .)


state 52

    (23) f -> vars . g
    (24) g -> . empty
    (25) g -> . f
    (146) empty -> .
    (22) f -> . empty
    (23) f -> . vars g
    (12) vars -> . VAR v : tipo u ;

    {               reduce using rule 146 (empty -> .)
    VAR             shift and go to state 5

    g                              shift and go to state 57
    f                              shift and go to state 58
    vars                           shift and go to state 52
    empty                          shift and go to state 59

state 53

    (36) cancion -> CANCION ( CTEE ) metercancion f . bloque
    (35) bloque -> . { i }

    {               shift and go to state 60

    bloque                         shift and go to state 61

state 54

    (22) f -> empty .

    {               reduce using rule 22 (f -> empty .)


state 55

    (27) params -> tipo ID . meterparams h
    (28) meterparams -> .

    ,               reduce using rule 28 (meterparams -> .)
    )               reduce using rule 28 (meterparams -> .)

    meterparams                    shift and go to state 62

state 56

    (14) funcion -> FUNC z ID meterfuncion ( params ) . f neur23 bloque
    (22) f -> . empty
    (23) f -> . vars g
    (146) empty -> .
    (12) vars -> . VAR v : tipo u ;

    {               reduce using rule 146 (empty -> .)
    VAR             shift and go to state 5

    vars                           shift and go to state 52
    f                              shift and go to state 63
    empty                          shift and go to state 54

state 57

    (23) f -> vars g .

    {               reduce using rule 23 (f -> vars g .)


state 58

    (25) g -> f .

    {               reduce using rule 25 (g -> f .)


state 59

    (24) g -> empty .
    (22) f -> empty .

  ! reduce/reduce conflict for { resolved using rule 22 (f -> empty .)
    {               reduce using rule 22 (f -> empty .)

  ! {               [ reduce using rule 24 (g -> empty .) ]


state 60

    (35) bloque -> { . i }
    (31) i -> . empty
    (32) i -> . estatuto j
    (146) empty -> .
    (38) estatuto -> . asignacion
    (39) estatuto -> . if
    (40) estatuto -> . for
    (41) estatuto -> . return
    (42) estatuto -> . while
    (43) estatuto -> . play
    (44) estatuto -> . print
    (45) estatuto -> . callvoidfunc
    (46) asignacion -> . ID asiglista = neur8 expresion ;
    (50) if -> . IF ( expresion ) neur13 bloque l ; neur15
    (56) for -> . FOR ( asignacion neur18 expresion ; neur19 asignacion ) neur21 bloque ; neur20
    (138) return -> . RETURN ( expresion ) ;
    (124) while -> . WHILE ( neur16 expresion ) neur13 bloque ; neur17
    (127) play -> . PLAY ( NOTA , CTEE ) ;
    (128) print -> . PRINT expresion ;
    (135) callvoidfunc -> . CALL ID neur24 ( s ) neur26 ;

    }               reduce using rule 146 (empty -> .)
    ID              shift and go to state 77
    IF              shift and go to state 78
    FOR             shift and go to state 76
    RETURN          shift and go to state 64
    WHILE           shift and go to state 65
    PLAY            shift and go to state 73
    PRINT           shift and go to state 66
    CALL            shift and go to state 81

    if                             shift and go to state 67
    for                            shift and go to state 68
    callvoidfunc                   shift and go to state 69
    estatuto                       shift and go to state 70
    print                          shift and go to state 71
    empty                          shift and go to state 72
    play                           shift and go to state 74
    return                         shift and go to state 75
    asignacion                     shift and go to state 79
    i                              shift and go to state 80
    while                          shift and go to state 82

state 61

    (36) cancion -> CANCION ( CTEE ) metercancion f bloque .

    $end            reduce using rule 36 (cancion -> CANCION ( CTEE ) metercancion f bloque .)


state 62

    (27) params -> tipo ID meterparams . h
    (29) h -> . empty
    (30) h -> . , params
    (146) empty -> .

    ,               shift and go to state 84
    )               reduce using rule 146 (empty -> .)

    h                              shift and go to state 83
    empty                          shift and go to state 85

state 63

    (14) funcion -> FUNC z ID meterfuncion ( params ) f . neur23 bloque
    (21) neur23 -> .

    {               reduce using rule 21 (neur23 -> .)

    neur23                         shift and go to state 86

state 64

    (138) return -> RETURN . ( expresion ) ;

    (               shift and go to state 87


state 65

    (124) while -> WHILE . ( neur16 expresion ) neur13 bloque ; neur17

    (               shift and go to state 88


state 66

    (128) print -> PRINT . expresion ;
    (61) expresion -> . m subexpresion
    (62) m -> . empty
    (63) m -> . NOT
    (146) empty -> .

    NOT             shift and go to state 91
    -               reduce using rule 146 (empty -> .)
    (               reduce using rule 146 (empty -> .)
    ID              reduce using rule 146 (empty -> .)
    CTEE            reduce using rule 146 (empty -> .)
    CTEF            reduce using rule 146 (empty -> .)
    CTEBOOL         reduce using rule 146 (empty -> .)
    CTECHAR         reduce using rule 146 (empty -> .)
    CALL            reduce using rule 146 (empty -> .)

    expresion                      shift and go to state 89
    m                              shift and go to state 90
    empty                          shift and go to state 92

state 67

    (39) estatuto -> if .

    ID              reduce using rule 39 (estatuto -> if .)
    IF              reduce using rule 39 (estatuto -> if .)
    FOR             reduce using rule 39 (estatuto -> if .)
    RETURN          reduce using rule 39 (estatuto -> if .)
    WHILE           reduce using rule 39 (estatuto -> if .)
    PLAY            reduce using rule 39 (estatuto -> if .)
    PRINT           reduce using rule 39 (estatuto -> if .)
    CALL            reduce using rule 39 (estatuto -> if .)
    }               reduce using rule 39 (estatuto -> if .)


state 68

    (40) estatuto -> for .

    ID              reduce using rule 40 (estatuto -> for .)
    IF              reduce using rule 40 (estatuto -> for .)
    FOR             reduce using rule 40 (estatuto -> for .)
    RETURN          reduce using rule 40 (estatuto -> for .)
    WHILE           reduce using rule 40 (estatuto -> for .)
    PLAY            reduce using rule 40 (estatuto -> for .)
    PRINT           reduce using rule 40 (estatuto -> for .)
    CALL            reduce using rule 40 (estatuto -> for .)
    }               reduce using rule 40 (estatuto -> for .)


state 69

    (45) estatuto -> callvoidfunc .

    ID              reduce using rule 45 (estatuto -> callvoidfunc .)
    IF              reduce using rule 45 (estatuto -> callvoidfunc .)
    FOR             reduce using rule 45 (estatuto -> callvoidfunc .)
    RETURN          reduce using rule 45 (estatuto -> callvoidfunc .)
    WHILE           reduce using rule 45 (estatuto -> callvoidfunc .)
    PLAY            reduce using rule 45 (estatuto -> callvoidfunc .)
    PRINT           reduce using rule 45 (estatuto -> callvoidfunc .)
    CALL            reduce using rule 45 (estatuto -> callvoidfunc .)
    }               reduce using rule 45 (estatuto -> callvoidfunc .)


state 70

    (32) i -> estatuto . j
    (33) j -> . empty
    (34) j -> . i
    (146) empty -> .
    (31) i -> . empty
    (32) i -> . estatuto j
    (38) estatuto -> . asignacion
    (39) estatuto -> . if
    (40) estatuto -> . for
    (41) estatuto -> . return
    (42) estatuto -> . while
    (43) estatuto -> . play
    (44) estatuto -> . print
    (45) estatuto -> . callvoidfunc
    (46) asignacion -> . ID asiglista = neur8 expresion ;
    (50) if -> . IF ( expresion ) neur13 bloque l ; neur15
    (56) for -> . FOR ( asignacion neur18 expresion ; neur19 asignacion ) neur21 bloque ; neur20
    (138) return -> . RETURN ( expresion ) ;
    (124) while -> . WHILE ( neur16 expresion ) neur13 bloque ; neur17
    (127) play -> . PLAY ( NOTA , CTEE ) ;
    (128) print -> . PRINT expresion ;
    (135) callvoidfunc -> . CALL ID neur24 ( s ) neur26 ;

    }               reduce using rule 146 (empty -> .)
    ID              shift and go to state 77
    IF              shift and go to state 78
    FOR             shift and go to state 76
    RETURN          shift and go to state 64
    WHILE           shift and go to state 65
    PLAY            shift and go to state 73
    PRINT           shift and go to state 66
    CALL            shift and go to state 81

    if                             shift and go to state 67
    for                            shift and go to state 68
    callvoidfunc                   shift and go to state 69
    estatuto                       shift and go to state 70
    print                          shift and go to state 71
    empty                          shift and go to state 93
    play                           shift and go to state 74
    return                         shift and go to state 75
    asignacion                     shift and go to state 79
    i                              shift and go to state 94
    j                              shift and go to state 95
    while                          shift and go to state 82

state 71

    (44) estatuto -> print .

    ID              reduce using rule 44 (estatuto -> print .)
    IF              reduce using rule 44 (estatuto -> print .)
    FOR             reduce using rule 44 (estatuto -> print .)
    RETURN          reduce using rule 44 (estatuto -> print .)
    WHILE           reduce using rule 44 (estatuto -> print .)
    PLAY            reduce using rule 44 (estatuto -> print .)
    PRINT           reduce using rule 44 (estatuto -> print .)
    CALL            reduce using rule 44 (estatuto -> print .)
    }               reduce using rule 44 (estatuto -> print .)


state 72

    (31) i -> empty .

    }               reduce using rule 31 (i -> empty .)


state 73

    (127) play -> PLAY . ( NOTA , CTEE ) ;

    (               shift and go to state 96


state 74

    (43) estatuto -> play .

    ID              reduce using rule 43 (estatuto -> play .)
    IF              reduce using rule 43 (estatuto -> play .)
    FOR             reduce using rule 43 (estatuto -> play .)
    RETURN          reduce using rule 43 (estatuto -> play .)
    WHILE           reduce using rule 43 (estatuto -> play .)
    PLAY            reduce using rule 43 (estatuto -> play .)
    PRINT           reduce using rule 43 (estatuto -> play .)
    CALL            reduce using rule 43 (estatuto -> play .)
    }               reduce using rule 43 (estatuto -> play .)


state 75

    (41) estatuto -> return .

    ID              reduce using rule 41 (estatuto -> return .)
    IF              reduce using rule 41 (estatuto -> return .)
    FOR             reduce using rule 41 (estatuto -> return .)
    RETURN          reduce using rule 41 (estatuto -> return .)
    WHILE           reduce using rule 41 (estatuto -> return .)
    PLAY            reduce using rule 41 (estatuto -> return .)
    PRINT           reduce using rule 41 (estatuto -> return .)
    CALL            reduce using rule 41 (estatuto -> return .)
    }               reduce using rule 41 (estatuto -> return .)


state 76

    (56) for -> FOR . ( asignacion neur18 expresion ; neur19 asignacion ) neur21 bloque ; neur20

    (               shift and go to state 97


state 77

    (46) asignacion -> ID . asiglista = neur8 expresion ;
    (48) asiglista -> . empty
    (49) asiglista -> . accesoVarDim
    (146) empty -> .
    (121) accesoVarDim -> . [ neur27 nexp ]

    =               reduce using rule 146 (empty -> .)
    [               shift and go to state 100

    accesoVarDim                   shift and go to state 98
    asiglista                      shift and go to state 99
    empty                          shift and go to state 101

state 78

    (50) if -> IF . ( expresion ) neur13 bloque l ; neur15

    (               shift and go to state 102


state 79

    (38) estatuto -> asignacion .

    ID              reduce using rule 38 (estatuto -> asignacion .)
    IF              reduce using rule 38 (estatuto -> asignacion .)
    FOR             reduce using rule 38 (estatuto -> asignacion .)
    RETURN          reduce using rule 38 (estatuto -> asignacion .)
    WHILE           reduce using rule 38 (estatuto -> asignacion .)
    PLAY            reduce using rule 38 (estatuto -> asignacion .)
    PRINT           reduce using rule 38 (estatuto -> asignacion .)
    CALL            reduce using rule 38 (estatuto -> asignacion .)
    }               reduce using rule 38 (estatuto -> asignacion .)


state 80

    (35) bloque -> { i . }

    }               shift and go to state 103


state 81

    (135) callvoidfunc -> CALL . ID neur24 ( s ) neur26 ;

    ID              shift and go to state 104


state 82

    (42) estatuto -> while .

    ID              reduce using rule 42 (estatuto -> while .)
    IF              reduce using rule 42 (estatuto -> while .)
    FOR             reduce using rule 42 (estatuto -> while .)
    RETURN          reduce using rule 42 (estatuto -> while .)
    WHILE           reduce using rule 42 (estatuto -> while .)
    PLAY            reduce using rule 42 (estatuto -> while .)
    PRINT           reduce using rule 42 (estatuto -> while .)
    CALL            reduce using rule 42 (estatuto -> while .)
    }               reduce using rule 42 (estatuto -> while .)


state 83

    (27) params -> tipo ID meterparams h .

    )               reduce using rule 27 (params -> tipo ID meterparams h .)


state 84

    (30) h -> , . params
    (26) params -> . empty
    (27) params -> . tipo ID meterparams h
    (146) empty -> .
    (139) tipo -> . y
    (142) y -> . INT
    (143) y -> . CHAR
    (144) y -> . FLOAT
    (145) y -> . BOOL

    )               reduce using rule 146 (empty -> .)
    INT             shift and go to state 30
    CHAR            shift and go to state 32
    FLOAT           shift and go to state 31
    BOOL            shift and go to state 34

    tipo                           shift and go to state 48
    params                         shift and go to state 105
    y                              shift and go to state 33
    empty                          shift and go to state 50

state 85

    (29) h -> empty .

    )               reduce using rule 29 (h -> empty .)


state 86

    (14) funcion -> FUNC z ID meterfuncion ( params ) f neur23 . bloque
    (35) bloque -> . { i }

    {               shift and go to state 60

    bloque                         shift and go to state 106

state 87

    (138) return -> RETURN ( . expresion ) ;
    (61) expresion -> . m subexpresion
    (62) m -> . empty
    (63) m -> . NOT
    (146) empty -> .
